--- a/src/App2/FayApp.html
+++ b/src/App2/FayApp.html
@@ -4,6 +4,13 @@
     <meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
     <script type="text/javascript" src="jquery-1.8.3.min.js"></script>
 
+    <script type="text/javascript">
+		function formatTime(dateString) {
+			var dateObj = new Date(dateString);
+			var mins = dateObj.getMinutes()
+			return dateObj.getHours() + ":" + ((mins <= 9) ?  ("0" + mins) : mins);
+		}
+    </script>
     <script type="text/javascript" src="FayApp.js"></script>
     </script>
   </head>
