progress on integration with calendar

--- a/src/App2/FayApp.html
+++ b/src/App2/FayApp.html
@@ -114,7 +114,8 @@
 			$( "#datepicker" ).datepicker({
 				inline: true,
 				onSelect: callback,
-				firstDay: 1
+				firstDay: 1,
+				dateFormat: 'yy-mm-dd'
 			});
 		}
 	</script>
