table headers were cleared when resetting the table

--- a/src/App2/FayApp.html
+++ b/src/App2/FayApp.html
@@ -133,9 +133,12 @@
 	<div id="pleasehold">Please hold...</div>
 	<div id="eventsDiv">
 		<table id="eventsTable">
+			<thead>
 			<tr><th>Time</th>
 				<th>Event type</th><th>Description</th><th>Extra info</th></tr>
-
+			</thead>
+			<tbody>
+			</tbody>
 		</table>
 	</div>
 	<div id="sidebar"></div>
