--- a/src/App2/FayApp.html
+++ b/src/App2/FayApp.html
@@ -8,11 +8,19 @@
 		body {
 			min-height: 100%;
 			height: 100%;
+			/* without that, i get a horizontal scrollbar
+			   because of the sidebar, not sure why but
+			   it's to scroll to blank space. i think the
+			   right 15px padding from bootstrap.*/
+			overflow: hidden;
 		}
 
 		/* override bootstrap */
 		pre {
 			white-space: nowrap !important;
+		}
+		.table {
+			margin-bottom: 0px !important;
 		}
 
 		.fully_responsive {
@@ -28,9 +36,8 @@
 		}
 
 		#sidebar {
-			background: aliceblue;
 			overflow: auto;
-			display: inline-block;
+			/*display: inline-block;*/
 			height: 100%;
 		}
 
@@ -58,31 +65,6 @@
 			height: 100%;
 			display: block; /* needed for overflow
 			to work, http://stackoverflow.com/a/4457290/516188 */
-		}
-		table#eventsTable td {
-			padding: 5px;
-		}
-
-		table#eventsTable th {
-			text-align: left;
-			padding: 5px;
-		}
-
-		table#eventsTable tr:nth-child(even) {
-			background: aliceblue;
-		}
-
-		table#eventsTable tr.current td:first-child {
-			border-left: 1px dashed #000000;
-		}
-
-		table#eventsTable tr.current td:last-child {
-			border-right: 1px dashed #000000;
-		}
-
-		table#eventsTable tr.current td {
-			border-top: 1px dashed #000000;
-			border-bottom: 1px dashed #000000;
 		}
 	</style>
 	<script type="text/javascript" src="jquery-1.8.3.min.js"></script>
@@ -133,7 +115,7 @@
 
 	<div class="row vert_limited">
 		<div class="col-lg-8 fully_responsive">
-			<table id="eventsTable">
+			<table id="eventsTable" class="table">
 				<thead>
 				<tr><th>Time</th>
 					<th>Event type</th><th>Description</th><th>Extra info</th></tr>
