progress on config with fay...

--- a/src/App2/FayConfig.html
+++ b/src/App2/FayConfig.html
@@ -19,6 +19,13 @@
 		}
 	</style>
 	<script>
+	function getKeys(obj) {
+		var result = [];
+		for (var name in obj) {
+			result.push(name);
+		}
+		return result;
+	}
 	</script>
 	<script type="text/javascript" src="FayConfig.js"></script>
 </head>
