more progress on config

--- a/src/App2/FayConfig.html
+++ b/src/App2/FayConfig.html
@@ -28,6 +28,7 @@
 	}
 	</script>
 	<script type="text/javascript" src="FayConfig.js"></script>
+	<link href="/static/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 	<a href="#" id="addEventButton">Add event provider...</a>
