--- a/src/App2/FayConfig.html
+++ b/src/App2/FayConfig.html
@@ -5,6 +5,7 @@
 	</title>
 	<script type='text/javascript' src='/static/jquery-1.8.3.min.js'></script>
 	<script type='text/javascript' src='/static/jquery-ui-1.9.2/js/jquery-ui-1.9.2.custom.min.js'></script>
+	<script src="/static/bootstrap-3.0.0/js/bootstrap.js"></script>
 	<link href="/static/jquery-ui-1.9.2/css/smoothness/jquery-ui-1.9.2.custom.css" rel="stylesheet">
 	<style>
 		div.arrayWrap {
@@ -28,10 +29,22 @@
 	}
 	</script>
 	<script type="text/javascript" src="FayConfig.js"></script>
-	<link href="/static/bootstrap.min.css" rel="stylesheet">
+	<link href="/static/bootstrap-3.0.0/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-	<a href="#" id="addEventButton">Add event provider...</a>
+	<nav class="navbar navbar-default" role="navigation">
+	<!-- Brand and toggle get grouped for better mobile display -->
+		<div class="navbar-header">
+			<a class="navbar-brand" href="#">Timesheet</a>
+		</div>
+	<ul class="nav navbar-nav navbar-right">
+		<li class="dropdown">
+			<a href="#" class="dropdown-toggle" data-toggle="dropdown">Add module<b class="caret"></b></a>
+			<ul class="dropdown-menu" id="add_module_menu">
+			</ul>
+		</li>
+	</ul>
+	</nav>
 	<div id="addPopup">
 		Pick the plugin to add:
 		<select id="pluginAddCombo"></select>
