--- a/src/App2/FayConfig.html
+++ b/src/App2/FayConfig.html
@@ -45,11 +45,23 @@
 		</li>
 	</ul>
 	</nav>
-	<div id="addPopup">
-		Pick the plugin to add:
-		<select id="pluginAddCombo"></select>
-		<div id="optionValues"></div>
-	</div>
+	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+					<h4 class="modal-title" id="myModalLabel">Modal title</h4>
+				</div>
+				<div class="modal-body">
+					<p>One fine body&hellip;</p>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+					<button type="button" class="btn btn-primary">Save changes</button>
+				</div>
+			</div><!-- /.modal-content -->
+		</div><!-- /.modal-dialog -->
+	</div><!-- /.modal -->
 	<div id="curConfig"><div>
 </body>
 </html>
