--- a/src/App2/FayConfig.html
+++ b/src/App2/FayConfig.html
@@ -30,9 +30,12 @@
 	</script>
 	<script type="text/javascript" src="FayConfig.js"></script>
 	<link href="/static/bootstrap-3.0.0/css/bootstrap.min.css" rel="stylesheet">
+	<style>
+		body { padding-top: 70px; }
+	</style>
 </head>
 <body>
-	<nav class="navbar navbar-default" role="navigation">
+	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 	<!-- Brand and toggle get grouped for better mobile display -->
 		<div class="navbar-header">
 			<a class="navbar-brand" href="#">Timesheet</a>
