--- a/src/App2/FayConfig.html
+++ b/src/App2/FayConfig.html
@@ -40,13 +40,19 @@
 		<div class="navbar-header">
 			<a class="navbar-brand" href="#">Timesheet</a>
 		</div>
-	<ul class="nav navbar-nav navbar-right">
-		<li class="dropdown">
-			<a href="#" class="dropdown-toggle" data-toggle="dropdown">Add module<b class="caret"></b></a>
-			<ul class="dropdown-menu" id="add_module_menu">
+		<div class="collapse navbar-collapse navbar-ex1-collapse">
+			<ul class="nav navbar-nav">
+				<li><a href="FayApp.html">Activities</a></li>
+				<li class="active"><a href="#">Event providers</a></li>
 			</ul>
-		</li>
-	</ul>
+			<ul class="nav navbar-nav navbar-right">
+				<li class="dropdown">
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Add module<b class="caret"></b></a>
+					<ul class="dropdown-menu" id="add_module_menu">
+					</ul>
+				</li>
+			</ul>
+		</div><!-- /.navbar-collapse -->
 	</nav>
 	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 		<div class="modal-dialog">
