--- a/src/App2/FayConfig.html
+++ b/src/App2/FayConfig.html
@@ -38,6 +38,12 @@
 	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 	<!-- Brand and toggle get grouped for better mobile display -->
 		<div class="navbar-header">
+			 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+				<span class="sr-only">Toggle navigation</span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
 			<a class="navbar-brand" href="#">Timesheet</a>
 		</div>
 		<div class="collapse navbar-collapse navbar-ex1-collapse">
