--- a/src/App2/FayConfig.html
+++ b/src/App2/FayConfig.html
@@ -74,6 +74,7 @@
 				<div class="modal-header">
 					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
 					<h4 class="modal-title" id="myModalLabel">Modal title</h4>
+					<div class="alert alert-danger" id="error">Error applying the change!</div>
 				</div>
 				<div class="modal-body">
 					<p>One fine body&hellip;</p>
