make sure the sidebar is always visible no matter the browser width, give a bit more width to the sidebar

--- a/src/App2/FayApp.html
+++ b/src/App2/FayApp.html
@@ -141,7 +141,7 @@
 	<div id="pleasehold">Please hold...</div>
 
 	<div class="row vert_limited">
-		<div class="col-lg-8 fully_responsive">
+		<div class="col-xs-7 fully_responsive">
 			<table id="eventsTable" class="table">
 				<thead>
 				<tr><th>Time</th>
@@ -151,7 +151,7 @@
 				</tbody>
 			</table>
 		</div>
-		<div class="col-lg-4 fully_responsive">
+		<div class="col-xs-5 fully_responsive">
 			<div id="sidebar"></div>
 		</div>
 	</div>
