now running from ~/.cabal folder and not current folder anymore

--- a/src/App2/FayApp.html
+++ b/src/App2/FayApp.html
@@ -85,9 +85,9 @@
 			to work, http://stackoverflow.com/a/4457290/516188 */
 		}
 	</style>
-	<script type="text/javascript" src="jquery-2.0.3.min.js"></script>
-	<script type='text/javascript' src='/static/jquery-ui-1.9.2/js/jquery-ui-1.9.2.custom.min.js'></script>
-<link href="/static/jquery-ui-1.9.2/css/smoothness/jquery-ui-1.9.2.custom.css" rel="stylesheet">
+	<script type="text/javascript" src="/static/jquery-2.0.3.min.js"></script>
+	<script type='text/javascript' src='/static/jquery-ui-1.9.2.custom/js/jquery-ui-1.9.2.custom.min.js'></script>
+<link href="/static/jquery-ui-1.9.2.custom/css/smoothness/jquery-ui-1.9.2.custom.css" rel="stylesheet">
 	<script src="/static/bootstrap-3.0.0/js/bootstrap.js"></script>
 	
 	<script type="text/javascript">
@@ -124,7 +124,7 @@
 			});
 		}
 	</script>
-	<script type="text/javascript" src="FayApp.js"></script>
+	<script type="text/javascript" src="/static/FayApp.js"></script>
        <link href="/static/bootstrap-3.0.0/css/bootstrap.min.css" rel="stylesheet">
 	</head>
   <body>
@@ -142,7 +142,7 @@
 		<div class="collapse navbar-collapse navbar-ex1-collapse">
 			<ul class="nav navbar-nav">
 				<li class="active"><a href="#">Activities</a></li>
-				<li><a href="FayConfig.html">Event providers</a></li>
+				<li><a href="/config">Event providers</a></li>
 			</ul>
 		</div><!-- /.navbar-collapse -->
 	</nav>
