--- a/src/App2/FayConfig.html
+++ b/src/App2/FayConfig.html
@@ -4,9 +4,9 @@
 		Config
 	</title>
 	<script type='text/javascript' src='/static/jquery-2.0.3.min.js'></script>
-	<script type='text/javascript' src='/static/jquery-ui-1.9.2/js/jquery-ui-1.9.2.custom.min.js'></script>
+	<script type='text/javascript' src='/static/jquery-ui-1.9.2.custom/js/jquery-ui-1.9.2.custom.min.js'></script>
 	<script src="/static/bootstrap-3.0.0/js/bootstrap.js"></script>
-	<link href="/static/jquery-ui-1.9.2/css/smoothness/jquery-ui-1.9.2.custom.css" rel="stylesheet">
+	<link href="/static/jquery-ui-1.9.2.custom/css/smoothness/jquery-ui-1.9.2.custom.css" rel="stylesheet">
 	<style>
 		div.arrayWrap {
 			border: 1px solid;
@@ -37,7 +37,7 @@
 		return result;
 	}
 	</script>
-	<script type="text/javascript" src="FayConfig.js"></script>
+	<script type="text/javascript" src="/static/FayConfig.js"></script>
 	<link href="/static/bootstrap-3.0.0/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
@@ -54,7 +54,7 @@
 		</div>
 		<div class="collapse navbar-collapse navbar-ex1-collapse">
 			<ul class="nav navbar-nav">
-				<li><a href="FayApp.html">Activities</a></li>
+				<li><a href="/">Activities</a></li>
 				<li class="active"><a href="#">Event providers</a></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
