--- a/src/App2/FayConfig.html
+++ b/src/App2/FayConfig.html
@@ -50,7 +50,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="#">Timesheet</a>
+			<a class="navbar-brand" href="#">Cigale</a>
 		</div>
 		<div class="collapse navbar-collapse navbar-ex1-collapse">
 			<ul class="nav navbar-nav">
