--- a/src/App2/FayConfig.html
+++ b/src/App2/FayConfig.html
@@ -7,6 +7,7 @@
 	<script type='text/javascript' src='/static/jquery-ui-1.9.2.custom/js/jquery-ui-1.9.2.custom.min.js'></script>
 	<script src="/static/bootstrap-3.0.0/js/bootstrap.js"></script>
 	<link href="/static/jquery-ui-1.9.2.custom/css/smoothness/jquery-ui-1.9.2.custom.css" rel="stylesheet">
+	<script src="/static/knockout-2.3.0.js"></script>
 	<style>
 		div.arrayWrap {
 			border: 1px solid;
@@ -60,7 +61,9 @@
 			<ul class="nav navbar-nav navbar-right">
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Add module<b class="caret"></b></a>
-					<ul class="dropdown-menu" id="add_module_menu">
+					<ul class="dropdown-menu" id="add_module_menu" data-bind="foreach: pluginTypes">
+						<li><a href="#" data-bind="text: cfgPluginName, click: function()
+						{$root.addConfigItem($root, $data)}"></a></li>
 					</ul>
 				</li>
 			</ul>
@@ -83,6 +86,23 @@
 			</div><!-- /.modal-content -->
 		</div><!-- /.modal-dialog -->
 	</div><!-- /.modal -->
+	<div data-bind="foreach: configSections">
+		<div class='panel panel-default'><div class='panel-heading'>
+				<h3 class='panel-title' data-bind="text: pluginInfo.cfgPluginName"></h3></div>
+			<div class='panel-body' data-bind="foreach: userSettings">
+				<div class='well well-sm'><div class='row'>
+						<div class='col-xs-8' data-bind="html: $root.pluginContents($parent.pluginInfo, $data)">
+				</div><div class='col-xs-4'><div class='btn-toolbar' style='float: right;'>
+				<button type='button' class='btn btn-default btn-lg' data-bind="click:
+					function() {$root.editConfigItem($root, $parent, $data)}">
+		<span class='glyphicon glyphicon-edit'></span></button>
+				<button type='button' class='btn btn-default btn-lg' data-bind="click:
+					function() {$root.deleteConfigItem($parent, $data)}">
+		<span class='glyphicon glyphicon-remove-circle'></span></button>
+				 </div></div></div>
+			</div>
+		</div>
+	</div>
 	<div id="curConfig"><div>
 </body>
 </html>
