--- a/src/App2/FayConfig.html
+++ b/src/App2/FayConfig.html
@@ -40,6 +40,26 @@
 	</script>
 	<script type="text/javascript" src="/static/FayConfig.js"></script>
 	<link href="/static/bootstrap-3.0.0/css/bootstrap.min.css" rel="stylesheet">
+	<script type="text/html" id="configEditTemplate">
+		<form role="form">
+			<div class="form-group" data-bind="foreach: configAddEditVM.pluginBeingEdited().cfgPluginConfig">
+				<label data-bind="text: memberName, attr: {for: memberName}"></label>
+				<!-- ko if: jQuery.inArray(memberType, ["String", "Text", "ByteString", "FilePath"]) >= 0 -->
+					<input type="text" class="form-control" data-bind="value: $root.configAddEditVM.configurationBeingEdited()[memberName], attr: {id: memberName}" placeholder="Enter value" value=""/>
+				<!-- /ko -->
+				<!-- ko if: memberType === "Password" -->
+					<input class="form-control" data-bind="value:
+$root.configAddEditVM.configurationBeingEdited()[memberName], attr: {id: memberName, type: $root.configAddEditVM.passwordType}" placeholder="Enter value" value=""/>
+				<!-- /ko -->
+			</div>
+			<!-- ko if: $root.configAddEditVM.pluginBeingEditedHasPasswords -->
+				<label><input type="checkbox" data-bind="checked: $root.configAddEditVM.showPasswords"/>Show passwords</label>
+			<!-- /ko -->
+		</form>
+	</script>
+	<script type="text/html" id="confirmDeleteTemplate">
+		Are you sure you want to delete this data source?
+	</script>
 </head>
 <body>
 	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
@@ -74,11 +94,10 @@
 			<div class="modal-content">
 				<div class="modal-header">
 					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-					<h4 class="modal-title" id="myModalLabel">Modal title</h4>
+					<h4 class="modal-title" data-bind="text: modalTitle"></h4>
 					<div class="alert alert-danger" id="error">Error applying the change!</div>
 				</div>
-				<div class="modal-body">
-					<p>One fine body&hellip;</p>
+				<div class="modal-body" data-bind="template: { name: modalTemplate, data: $root}">
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
