--- a/src/App2/FayConfig.html
+++ b/src/App2/FayConfig.html
@@ -94,15 +94,14 @@ $root.configAddEditVM.configurationBeingEdited()[memberName], attr: {id: memberN
 			<div class="modal-content">
 				<div class="modal-header">
 					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-					<h4 class="modal-title" data-bind="text: modalDialogVM.modalTitle"></h4>
+					<h4 class="modal-title" data-bind="text: modalDialogVM().modalTitle"></h4>
 					<div class="alert alert-danger" id="error">Error applying the change!</div>
 				</div>
-				<div class="modal-body" data-bind="template: { name: modalDialogVM.modalTemplate, data: $root}">
+				<div class="modal-body" data-bind="template: { name: modalDialogVM().modalTemplate, data: $root}">
 				</div>
-				<!-- TODO remove the id=main-action, must do the click through knockout -->
 				<div class="modal-footer">
-					<button type="button" data-bind="css:modalDialogVM.actionButtonClass,text:modalDialogVM.actionButtonText"
-				id="main-action"></button>
+					<button type="button"
+						data-bind="css:modalDialogVM().actionButtonClass,text:modalDialogVM().actionButtonText,click:function(){modalDialogVM().modalOkClick();}"></button>
 					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
 				</div>
 			</div><!-- /.modal-content -->
