support integration with epiphany to start as a web app in our own window

--- a/src/WebClient/FayApp.html
+++ b/src/WebClient/FayApp.html
@@ -131,6 +131,7 @@
 	</script>
 	<script type="text/javascript" src="/static/FayApp.js"></script>
        <link href="/static/bootstrap-3.0.0/css/bootstrap.min.css" rel="stylesheet">
+       <title>Cigale timesheet</title>
 	</head>
   <body>
 	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
