fix the width of the events list at 500px, the sidebar gets the rest

--- a/src/WebClient/FayApp.html
+++ b/src/WebClient/FayApp.html
@@ -165,7 +165,7 @@
 	<div id="pleasehold">Please hold...</div>
 
 	<div class="row vert_limited">
-		<div class="col-xs-5 fully_responsive">
+		<div class="col-xs-5 fully_responsive" style="width: 500px;">
 		<table id="eventsTable" class="table">
 			<thead>
 			<tr><th>Events</th>
@@ -179,7 +179,7 @@
 							<b><span data-bind="text: eventDate" style="position: absolute; top: 0px; font-size: 1.1em"></span></b>
 							<span data-bind="text: pluginName" style="position: absolute; top: 34px; left: 0px; color: gray; font-size: 0.8em; width:38px; text-align: center;"></span>
 							<span data-bind="text: desc" style="position: absolute; top: 20px; width: 400px;" class="ellipsis"></span>
-							<span data-bind="text: extraInfo" style="right: 0px; position: absolute; max-width: 350px;" class="ellipsis"></span>
+							<span data-bind="text: extraInfo" style="right: 0px; position: absolute; max-width: 335px;" class="ellipsis"></span>
 						</div>
 					</div>
 				</td>
@@ -187,7 +187,7 @@
 			</tbody>
 		</table>
 		</div>
-		<div class="col-xs-7 fully_responsive">
+		<div class="fully_responsive" style="position: relative; right: 0px; min-height: 1px; padding-left: 15px; padding-right: 15px;">
 			<div id="sidebar"></div>
 		</div>
 	</div>
