--- a/src/WebClient/FayApp.html
+++ b/src/WebClient/FayApp.html
@@ -90,6 +90,10 @@
 			overflow: hidden;
 			text-overflow: ellipsis;
 		}
+
+		nav li a {
+			text-decoration: none !important;
+		}
 	</style>
 	<script type="text/javascript" src="/static/jquery-2.0.3.min.js"></script>
 	<script type='text/javascript' src='/static/jquery-ui-1.9.2.custom/js/jquery-ui-1.9.2.custom.min.js'></script>
