--- a/src/WebClient/FayApp.html
+++ b/src/WebClient/FayApp.html
@@ -49,16 +49,16 @@
 		}
 
 		#pleasehold {
-			position: relative;
+			position: absolute;
 			width: 200px;
 			height: 50px;
 			background: aliceblue;
 			text-align: center;
 
-			/* the following two lines center
-			   the block. */
-			margin-left: auto;
-			margin-right: auto;
+			top: 50%;
+			left: 50%;
+			margin-left: -100px;
+			margin-top: -25px;
 
 			/* with line-height==height,
 			   text will be vertically centered. */
