--- a/src/WebClient/FilePickerModal.html
+++ b/src/WebClient/FilePickerModal.html
@@ -16,8 +16,8 @@
 					</thead>
 					<tbody data-bind="foreach: sortedFiles">
 						<tr data-bind="css: {active: $root.isActive($root, $data)}, click: function() {$root.selectFile($root, $data)}">
-							<td style="width:65%" data-bind="text: filename"></td>
-							<td style="width:35%" data-bind="text: filesize"></td>
+							<td style="width:65%" data-bind="text: serverInfo.filename"></td>
+							<td style="width:35%" data-bind="text: filesizeDesc"></td>
 						</tr>
 					</tbody>
 				</table>
