--- a/src/WebClient/FilePickerModal.html
+++ b/src/WebClient/FilePickerModal.html
@@ -25,7 +25,7 @@
 			</div>
 			<div class="modal-footer">
 				<button type="button" class="btn btn-primary"
-					data-bind="click:function(){ okClicked(selectedFile()); }">OK</button>
+					data-bind="click:function(){ okClicked(); }">OK</button>
 				<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
 			</div>
 		</div><!-- /.modal-content -->
