--- a/src/WebClient/FilePickerModal.html
+++ b/src/WebClient/FilePickerModal.html
@@ -1,5 +1,5 @@
 <div class="modal fade" id="filePickerModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="z-index:5000">
-	<div class="modal-dialog" style="width:750px;">
+	<div class="modal-dialog" style="width:75%;">
 		<div class="modal-content">
 			<div class="modal-header">
 				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
